--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,43 @@
-notion.md
+# Environment variables
+.env
+.env.*
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+dist/
+build/
+out/
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS files
 .DS_Store
-node_modules
-target
-/**/*/node_modules
-/**/*/node_modules
-/**/*/.env
+Thumbs.db
+
+# Solana
+.anchor
+.solana
+target/
+test-ledger/
+
+# Logs
+logs/
+*.log
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Temporary files
+*.tmp
+*.temp
