--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
 [workspace]
+resolver = "2"
 members = [
-    "quest-1/**/*",
-    "quest-2/**/*",
-    "quest-3/**/*",
-    "quest-4/**/*",
-    "quest-5/**/*",
-    "quest-6/**/*",
-    "quest-7/**/*",
+    "quest-2/tiny-adventure/program/programs/tiny-adventure",
+    "quest-4/programs/swap-program",
+    "deepseek-api"
 ]
