--- a/quest-4/programs/swap-program/Cargo.toml
+++ b/quest-4/programs/swap-program/Cargo.toml
@@ -17,4 +17,4 @@ default = []
 
 [dependencies]
 anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
-anchor-spl = "0.28.0"
+anchor-spl = { version = "0.28.0" }
