--- a/quest-4/package.json
+++ b/quest-4/package.json
@@ -4,6 +4,9 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
+        "start": "ts-node src/app.ts",
+        "dev": "nodemon --exec ts-node src/app.ts",
+        "build": "tsc",
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
         "test": "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
@@ -14,18 +17,29 @@
         "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
         "@solana/spl-token": "^0.3.8",
         "@solana/web3.js": "^1.87.6",
-        "@types/form-data": "^2.2.1",
-        "axios": "^1.8.4",
-        "form-data": "^4.0.2"
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/express-rate-limit": "^6.0.0",
+        "@types/helmet": "^4.0.0",
         "@types/mocha": "^9.0.0",
+        "@types/node": "^20.11.24",
+        "@types/winston": "^2.4.4",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
+        "nodemon": "^3.1.0",
         "prettier": "^2.6.2",
         "ts-mocha": "^10.0.0",
+        "ts-node": "^10.9.2",
         "typescript": "^4.3.5"
     }
 }
