--- a/package.json
+++ b/package.json
@@ -1,6 +1,67 @@
 {
+  "scripts": {
+    "start": "ts-node src/app.ts",
+    "build": "tsc",
+    "test:pinata": "ts-node src/pinata-test.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest \"src/tests/(?!integration).*\\.test\\.ts$\"",
+    "test:integration": "jest \"src/tests/integration/.*\\.test\\.ts$\" --runInBand",
+    "test:all": "jest --runInBand",
+    "security:scan": "snyk test && npm audit",
+    "security:monitor": "ts-node src/scripts/security-monitor.ts",
+    "docker:scan": "trivy image app:latest",
+    "test:security": "jest --testMatch='**/*.security.test.ts'"
+  },
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
+    "@slack/web-api": "^6.11.2",
+    "@slack/webhook": "^6.1.0",
+    "@types/form-data": "^2.2.1",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.10.9",
     "@types/winston": "^2.4.4",
-    "winston": "^3.17.0"
+    "bcrypt": "^5.1.1",
+    "connect-redis": "^8.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
+    "form-data": "^4.0.2",
+    "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "prom-client": "^13.2.0",
+    "prometheus-client": "^0.1.1",
+    "redis": "^4.7.0",
+    "snyk": "^1.1234.0",
+    "sqlstring": "^2.3.3",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/connect-redis": "^0.0.23",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.11.24",
+    "@types/sqlstring": "^2.3.2",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
