--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,63 @@
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Node
+# Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 # Build output
 dist/
 build/
 out/
 
-# IDE and editor files
+# Coverage reports
+coverage/
+.nyc_output/
+lcov-report/
+lcov.info
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# IDE and editors
 .idea/
 .vscode/
 *.swp
 *.swo
-*~
-
-# OS files
 .DS_Store
-Thumbs.db
+*.sublime-workspace
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+.jest-cache/
+
+# SonarQube
+.scannerwork/
+.sonarqube/
+sonar-report.xml
+
+# Temporary files
+tmp/
+.tmp/
+temp/
+
+# Certificates for local development
+/certs/
+
+# Generated docs
+/docs/api/
 
 # Solana
 .anchor
 .solana
 target/
 test-ledger/
-
-# Logs
-logs/
-*.log
-
-# Coverage
-coverage/
-.nyc_output/
-
-# Temporary files
-*.tmp
-*.temp
