Update sonar-project.properties with explicit base directory

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=YuccaMedia_Solana_Pirate_Adventure
 sonar.organization=yuccamedia
 
+# Explicitly set the project base directory
+sonar.projectBaseDir=.
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Solana_Pirate_Adventure
 #sonar.projectVersion=1.0
