Fix SonarCloud workflow and properties: disable dependency analysis and create package files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,10 @@ sonar.organization=yuccamedia
 # Explicitly set the project base directory
 sonar.projectBaseDir=.
 
+# Skip dependency analysis since it's causing issues
+sonar.dependencyCheck.skip=true
+sonar.nodejs.detectNode=false
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Solana_Pirate_Adventure
 #sonar.projectVersion=1.0
@@ -30,7 +34,7 @@ sonar.typescript.tsconfigPath=tsconfig.json
 sonar.security.sources.disableHighAccuracy=false
 
 # Additional parameters
-sonar.verbose=false
+sonar.verbose=true
 
 # Note: Replace the placeholders above with your actual values from SonarCloud
 # - To find your organization key: Go to Your SonarCloud Dashboard > Account > Organizations
