--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          
+      # Create empty package.json file to satisfy SonarCloud
+      - name: Create package files for SonarCloud
+        run: |
+          echo '{"name":"solana-pirate-adventure","version":"1.0.0","private":true}' > package.json
+          echo '{}' > package-lock.json
+          
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
