--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=YuccaMedia_Solana_Pirate_Adventure
 sonar.organization=yuccamedia
+# Add the project ID you found (replace with the actual string of letters and numbers)
+sonar.projectId=[YOUR_PROJECT_ID_STRING]
 
 # Explicitly set the project base directory
 sonar.projectBaseDir=.
