Add SonarCloud configuration and badges

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,78 @@
-# Replace these with your actual Pinata API keys from your dashboard
-PINATA_API_KEY=your_api_key_here    # The API Key from Pinata dashboard
-PINATA_API_SECRET=your_api_secret_here    # The API Secret from Pinata dashboard
-PINATA_JWT=your_jwt_token_here    # The JWT token from Pinata dashboard 
+# Pinata API Configuration
+PINATA_API_KEY=your-pinata-api-key-here
+PINATA_API_SECRET=your-pinata-api-secret-here
+PINATA_JWT=your-pinata-jwt-token-here
+
+# Database Security
+DB_ENCRYPTION_KEY=your-secure-encryption-key-here
+DB_SSL_CA_PATH=../certs/ca.crt
+DB_SSL_KEY_PATH=../certs/client-key.pem
+DB_SSL_CERT_PATH=../certs/client-cert.pem
+
+# Security Monitoring
+ALERT_EMAILS=your-email@example.com
+ALERT_FROM_EMAIL=security-alerts@example.com
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_SECURE=true
+SMTP_USER=alerts@example.com
+SMTP_PASS=your-smtp-password
+
+# Slack Integration
+SLACK_TOKEN=xoxb-your-slack-token
+SLACK_WEBHOOK=https://hooks.slack.com/services/your-webhook-url
+SLACK_CHANNEL=#security-alerts
+
+# Security Scanning
+SONAR_URL=https://sonar.example.com
+SONAR_TOKEN=your-sonar-token
+DOCKER_IMAGE=app:latest
+
+# Monitoring Metrics
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3000
+
+# Infrastructure Security
+NODE_ENV=production
+HTTPS=true
+ALLOWED_ORIGINS=https://app.example.com
+SESSION_SECRET=your-secure-session-secret
+
+# Compliance Settings
+# Access Control
+ENFORCE_MFA=true
+PASSWORD_MIN_LENGTH=12
+PASSWORD_REQUIRE_COMPLEXITY=true
+PASSWORD_EXPIRY_DAYS=90
+PASSWORD_HISTORY_SIZE=5
+
+# Session Security
+SESSION_TIMEOUT=3600
+SESSION_SECURE=true
+SESSION_SAME_SITE=strict
+
+# Encryption
+TLS_VERSION=1.3
+ALLOWED_CIPHERS=TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_CHACHA20_POLY1305_SHA256
+BACKUP_ENCRYPTION_KEY=your-backup-encryption-key
+
+# Audit & Logging
+LOG_RETENTION_DAYS=90
+AUDIT_ENABLED=true
+AUDIT_DETAILED=true
+
+# Network Security
+DDOS_PROTECTION=enabled
+RATE_LIMIT_WINDOW=900000
+RATE_LIMIT_MAX=100
+
+# Data Protection
+DATA_RETENTION_DAYS=365
+BACKUP_RETENTION_DAYS=90
+GDPR_ENABLED=true
+PCI_COMPLIANCE=true
+
+# API Documentation Access Control
+MASTERKEY_ADMIN=your-admin-key-here
+USERKEY_DEV=your-dev-key-here
+STAKEHOLDER_KEY=your-stakeholder-key-here 
