--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: List files in checkout directory
+        run: ls -la
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
