--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node src/app.ts",
     "build": "tsc",
+    "dev": "NODE_ENV=development nodemon --exec ts-node src/app.ts",
     "test:pinata": "ts-node src/pinata-test.ts",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -14,8 +15,8 @@
     "test:integration": "jest \"src/tests/integration/.*\\.test\\.ts$\" --runInBand",
     "test:security": "jest \"src/tests/security/.*\\.test\\.ts$\" --runInBand",
     "test:all": "jest --runInBand",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint \"src/**/*.{ts,tsx}\" \"tests/**/*.{ts,tsx}\"",
+    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint \"src/**/*.{ts,tsx}\" \"tests/**/*.{ts,tsx}\" --fix",
     "security:scan": "snyk test && npm audit",
     "security:monitor": "ts-node src/scripts/security-monitor.ts",
     "docker:scan": "trivy image app:latest",
@@ -62,6 +63,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@types/bcrypt": "^5.0.2",
     "@types/connect-redis": "^0.0.23",
     "@types/cors": "^2.8.17",
@@ -75,9 +77,14 @@
     "@types/sqlstring": "^2.3.2",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^8.57.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^15.2.0",
+    "nodemon": "^3.1.9",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
